fix: overflow hidden때문에 잘리는 현상 수정

--- a/src/assets/style/pages/index.scss
+++ b/src/assets/style/pages/index.scss
@@ -32,13 +32,15 @@
     background-color: rgba(255, 255, 255, 0.1);
   }
   .point-banner {
-    overflow: hidden;
     background-color: rgba(255, 255, 255, 0.6);
     border: 5px solid $color-neon;
     .box-flex {
       display: flex;
       align-items: center;
       .area-img {
+        overflow: hidden;
+        border-top-left-radius: 15px;
+        border-bottom-left-radius: 15px;
         width: 40%;
         img {
           max-width: 100%;
